# a2a-template-langgraph

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml
a2a_service/: agent.py  database.py  server.py  types.py
a2a_service/models/: __init__.py  db_models.py  enums.py  errors.py  events.py  request.py  response.py  server.py  task.py
a2a_service/task_managers/: __init__.py  async_inmem_task_manager.py  db_task_manager.py
a2a_service/tools/: __init__.py  search.py
alembic/: env.py
alembic/versions/: 5f150a4e2023_create_tasks_and_artifacts_tables.py
