[project]
name = "a2a-template-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "langchain-anthropic>=0.3.11",
    "langchain-core>=0.3.52",
    "langchain-openai>=0.3.13",
    "langgraph>=0.3.30",
    "langsmith>=0.3.31",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.1",
]
